[gd_scene load_steps=8 format=3 uid="uid://cdiucgv0ejc7g"]

[ext_resource type="Script" path="res://Player/Player.gd" id="1_ywcl7"]
[ext_resource type="FontFile" uid="uid://coclfvq0t6lfr" path="res://Font/VCR_OSD_MONO.ttf" id="2_mu3tj"]
[ext_resource type="Shader" path="res://Player/vhs.gdshader" id="3_fkwui"]

[sub_resource type="CapsuleShape3D" id="1"]

[sub_resource type="CapsuleMesh" id="2"]

[sub_resource type="LabelSettings" id="LabelSettings_r15dr"]
line_spacing = 5.0
font = ExtResource("2_mu3tj")
font_size = 10
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ac2ky"]
shader = ExtResource("3_fkwui")
shader_parameter/shake = 0.015
shader_parameter/noiseQuality = 163.0
shader_parameter/noiseIntensity = 0.001
shader_parameter/offsetIntensity = 0.018
shader_parameter/colorOffsetIntensity = 0.1

[node name="Player" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
script = ExtResource("1_ywcl7")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, -1.06581e-14, 0, 1.06581e-14, 1, 0, 0, 0)
shape = SubResource("1")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, 0)

[node name="InteractRayCast" type="RayCast3D" parent="Camera3D"]
target_position = Vector3(0, 0, -5)
collide_with_areas = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -1, -8.74228e-08, 0, 8.74228e-08, -1, 0, -5.96046e-08, 0)
cast_shadow = 0
mesh = SubResource("2")

[node name="FloorDetectRayCast" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)

[node name="PlayerFootstepSound" type="AudioStreamPlayer" parent="."]

[node name="InteractLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.5
offset_top = -13.0
offset_right = 30.5
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 1
text = "Interact"
label_settings = SubResource("LabelSettings_r15dr")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Crosshair" type="Polygon2D" parent="."]
position = Vector2(42, 21)
scale = Vector2(0.805029, 0.823205)
polygon = PackedVector2Array(212, 119, 210, 121, 212, 123, 214, 121)

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_ac2ky")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_right = 2.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
